web/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
    component: nginx

spec:
  selector:
    matchLabels:
      app: web
      component: nginx

  template:
    metadata:
      labels:
        app: web
        component: nginx
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 30
          timeoutSeconds: 10
