web/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
    component: nginx

spec:
  selector:
    app: web
    component: nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
